# gistblog

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  OLD_AGENTS.md  README.rst  archives.html  authors.html  categories.html  fetch_gists.py  generate_search_index.py  index.html  pelicanconf.py  pyproject.toml  requirements.txt  search.html  tags.html
.agents/skills/coding-standards/: SKILL.md
.agents/skills/dev-setup/: SKILL.md
.agents/skills/dev-workflow/: SKILL.md
.agents/skills/documentation-policy/: SKILL.md
.agents/skills/pr-review/: SKILL.md
.github/workflows/: deploy.yml  deply.yml  test.yml
author/: artur-barseghyan.html
category/: art.html  misc.html  tech.html
docs/: conf.py  llms.rst  pelicanconf.rst  requirements.txt  source_tree.rst
feeds/: all-en.atom.xml  all.atom.xml  art.atom.xml  artur-barseghyan.atom.xml  artur-barseghyan.rss.xml  misc.atom.xml  tech.atom.xml
pages/search/: index.html
posts/2022/06/how-to-debug-python-applications/: index.html
posts/2023/04/yet-another-glimpse-on-writing-software-documentation/: index.html
posts/2024/10/how-to-uninstall-progressive-web-app-installed-with-vivaldi/: index.html
posts/2025/03/why-is-vivaldi-browser-a-great-companion/: index.html
posts/2025/09/pydata-amsterdam-2025-notes/: index.html
posts/2026/01/vs-code-for-pycharm-users/: index.html
posts/2026/02/safezip-zero-dependency-wrapper-for-secure-zip-extraction/: index.html
posts/2026/04/a-small-selection-of-photographs-i-took-before-2012/: index.html
posts/2026/04/bat-is-cat-with-extras/: index.html
posts/2026/04/cudatext-installation-and-config-for-sublimetext-users/: index.html
posts/2026/04/hide-pycover-files-from-ide/: index.html
posts/2026/04/licence-normaliser-taming-licence-chaos-in-python/: index.html
posts/2026/04/log4brains-images-support/: index.html
src/gistblog/: __init__.py  build_search_index.py  fetch_data.py
src/gistblog/tests/: conftest.py  test_fetch_data.py  test_search.py
static/: search_index.json
tag/: adrs.html  art.html  automation.html  bat.html  browsers.html  cat.html  cudatext.html  debugging.html  ide.html  licence.html  log4brains.html  macos.html  open-webui.html  photography.html  progressive-web-apps.html  pycharm.html  pydata-amsterdam.html  pytest.html  python.html  security.html  shell.html  sketch.html  text-editor.html  tweaks.html  uv.html  vivaldi.html  vs-code-plugins.html  vs-code.html  vscode-plugins.html  vscode.html  zip.html
theme/css/: main.css
themes/custom/templates/: base.html  index.html  minimal_infos.html  search.html
(+11 files in other folders)
